public/lite/api/zh-CN/r1.9/_sources/api_cpp/mindspore_ops.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _namespace_mindspore__ops:

mindspore::ops
========================

Classes
-------


- :doc:`../generate/classmindspore_ops_Abs`

- :doc:`../generate/classmindspore_ops_Activation`

- :doc:`../generate/classmindspore_ops_Adam`

- :doc:`../generate/classmindspore_ops_Add`

- :doc:`../generate/classmindspore_ops_AdderFusion`

- :doc:`../generate/classmindspore_ops_AddFusion`

- :doc:`../generate/classmindspore_ops_AddN`

- :doc:`../generate/classmindspore_ops_Affine`

- :doc:`../generate/classmindspore_ops_All`

- :doc:`../generate/classmindspore_ops_AllGather`

- :doc:`../generate/classmindspore_ops_ApplyMomentum`

- :doc:`../generate/classmindspore_ops_Argmax`

- :doc:`../generate/classmindspore_ops_ArgMaxFusion`

- :doc:`../generate/classmindspore_ops_ArgMinFusion`

- :doc:`../generate/classmindspore_ops_Assert`

- :doc:`../generate/classmindspore_ops_Assign`

- :doc:`../generate/classmindspore_ops_AssignAdd`

- :doc:`../generate/classmindspore_ops_Attention`

- :doc:`../generate/classmindspore_ops_AudioSpectrogram`

- :doc:`../generate/classmindspore_ops_AvgPool`

- :doc:`../generate/classmindspore_ops_AvgPoolFusion`

- :doc:`../generate/classmindspore_ops_BaseOperator`

- :doc:`../generate/classmindspore_ops_BatchNorm`

- :doc:`../generate/classmindspore_ops_BatchNormWithActivation`

- :doc:`../generate/classmindspore_ops_BatchNormWithAddAndActivation`

- :doc:`../generate/classmindspore_ops_BatchToSpace`

- :doc:`../generate/classmindspore_ops_BatchToSpaceND`

- :doc:`../generate/classmindspore_ops_BiasAdd`

- :doc:`../generate/classmindspore_ops_BinaryCrossEntropy`

- :doc:`../generate/classmindspore_ops_Broadcast`

- :doc:`../generate/classmindspore_ops_Call`

- :doc:`../generate/classmindspore_ops_Cast`

- :doc:`../generate/classmindspore_ops_Ceil`

- :doc:`../generate/classmindspore_ops_Clip`

- :doc:`../generate/classmindspore_ops_Concat`

- :doc:`../generate/classmindspore_ops_ConstantOfShape`

- :doc:`../generate/classmindspore_ops_Conv2D`

- :doc:`../generate/classmindspore_ops_Conv2DBackpropFilterFusion`

- :doc:`../generate/classmindspore_ops_Conv2DBackpropInputFusion`

- :doc:`../generate/classmindspore_ops_Conv2DFusion`

- :doc:`../generate/classmindspore_ops_Conv2DTranspose`

- :doc:`../generate/classmindspore_ops_Conv2dTransposeFusion`

- :doc:`../generate/classmindspore_ops_Cos`

- :doc:`../generate/classmindspore_ops_Crop`

- :doc:`../generate/classmindspore_ops_CropAndResize`

- :doc:`../generate/classmindspore_ops_CudnnUniformReal`

- :doc:`../generate/classmindspore_ops_CumSum`

- :doc:`../generate/classmindspore_ops_Custom`

- :doc:`../generate/classmindspore_ops_CustomExtractFeatures`

- :doc:`../generate/classmindspore_ops_CustomNormalize`

- :doc:`../generate/classmindspore_ops_CustomPredict`

- :doc:`../generate/classmindspore_ops_Depend`

- :doc:`../generate/classmindspore_ops_DepthToSpace`

- :doc:`../generate/classmindspore_ops_DetectionPostProcess`

- :doc:`../generate/classmindspore_ops_Div`

- :doc:`../generate/classmindspore_ops_DivFusion`

- :doc:`../generate/classmindspore_ops_Dropout`

- :doc:`../generate/classmindspore_ops_DynamicQuant`

- :doc:`../generate/classmindspore_ops_Eltwise`

- :doc:`../generate/classmindspore_ops_Elu`

- :doc:`../generate/classmindspore_ops_EmbeddingLookupFusion`

- :doc:`../generate/classmindspore_ops_Equal`

- :doc:`../generate/classmindspore_ops_Erf`

- :doc:`../generate/classmindspore_ops_Exp`

- :doc:`../generate/classmindspore_ops_ExpandDims`

- :doc:`../generate/classmindspore_ops_ExpFusion`

- :doc:`../generate/classmindspore_ops_FakeQuantWithMinMaxVars`

- :doc:`../generate/classmindspore_ops_FakeQuantWithMinMaxVarsPerChannel`

- :doc:`../generate/classmindspore_ops_FftImag`

- :doc:`../generate/classmindspore_ops_FftReal`

- :doc:`../generate/classmindspore_ops_Fill`

- :doc:`../generate/classmindspore_ops_Flatten`

- :doc:`../generate/classmindspore_ops_Floor`

- :doc:`../generate/classmindspore_ops_FloorDiv`

- :doc:`../generate/classmindspore_ops_FloorMod`

- :doc:`../generate/classmindspore_ops_FullConnection`

- :doc:`../generate/classmindspore_ops_FusedBatchNorm`

- :doc:`../generate/classmindspore_ops_Gather`

- :doc:`../generate/classmindspore_ops_GatherNd`

- :doc:`../generate/classmindspore_ops_GLU`

- :doc:`../generate/classmindspore_ops_Greater`

- :doc:`../generate/classmindspore_ops_GreaterEqual`

- :doc:`../generate/classmindspore_ops_GRU`

- :doc:`../generate/classmindspore_ops_HashtableLookup`

- :doc:`../generate/classmindspore_ops_InstanceNorm`

- :doc:`../generate/classmindspore_ops_InvertPermutation`

- :doc:`../generate/classmindspore_ops_IsFinite`

- :doc:`../generate/classmindspore_ops_L2NormalizeFusion`

- :doc:`../generate/classmindspore_ops_LayerNormFusion`

- :doc:`../generate/classmindspore_ops_LeakyRelu`

- :doc:`../generate/classmindspore_ops_Less`

- :doc:`../generate/classmindspore_ops_LessEqual`

- :doc:`../generate/classmindspore_ops_LinSpace`

- :doc:`../generate/classmindspore_ops_Log`

- :doc:`../generate/classmindspore_ops_LogicalAnd`

- :doc:`../generate/classmindspore_ops_LogicalNot`

- :doc:`../generate/classmindspore_ops_LogicalOr`

- :doc:`../generate/classmindspore_ops_LogSoftmax`

- :doc:`../generate/classmindspore_ops_LpNormalization`

- :doc:`../generate/classmindspore_ops_LRN`

- :doc:`../generate/classmindspore_ops_LshProjection`

- :doc:`../generate/classmindspore_ops_LSTM`

- :doc:`../generate/classmindspore_ops_MakeTuple`

- :doc:`../generate/classmindspore_ops_MatMulFusion`

- :doc:`../generate/classmindspore_ops_Maximum`

- :doc:`../generate/classmindspore_ops_MaxPool`

- :doc:`../generate/classmindspore_ops_MaxPoolFusion`

- :doc:`../generate/classmindspore_ops_Mfcc`

- :doc:`../generate/classmindspore_ops_Minimum`

- :doc:`../generate/classmindspore_ops_Mod`

- :doc:`../generate/classmindspore_ops_Mul`

- :doc:`../generate/classmindspore_ops_MulFusion`

- :doc:`../generate/classmindspore_ops_Neg`

- :doc:`../generate/classmindspore_ops_NLLLoss`

- :doc:`../generate/classmindspore_ops_NonMaxSuppression`

- :doc:`../generate/classmindspore_ops_NonZero`

- :doc:`../generate/classmindspore_ops_NotEqual`

- :doc:`../generate/classmindspore_ops_OneHot`

- :doc:`../generate/classmindspore_ops_OnesLike`

- :doc:`../generate/classmindspore_ops_OperatorRegister`

- :doc:`../generate/classmindspore_ops_OperatorRegisterHelper`

- :doc:`../generate/classmindspore_ops_Pad`

- :doc:`../generate/classmindspore_ops_PadFusion`

- :doc:`../generate/classmindspore_ops_PartialFusion`

- :doc:`../generate/classmindspore_ops_Pow`

- :doc:`../generate/classmindspore_ops_PowFusion`

- :doc:`../generate/classmindspore_ops_PReLU`

- :doc:`../generate/classmindspore_ops_PReLUFusion`

- :doc:`../generate/classmindspore_ops_PriorBox`

- :doc:`../generate/classmindspore_ops_QuantDTypeCast`

- :doc:`../generate/classmindspore_ops_RaggedRange`

- :doc:`../generate/classmindspore_ops_RandomNormal`

- :doc:`../generate/classmindspore_ops_RandomStandardNormal`

- :doc:`../generate/classmindspore_ops_Range`

- :doc:`../generate/classmindspore_ops_Rank`

- :doc:`../generate/classmindspore_ops_RealDiv`

- :doc:`../generate/classmindspore_ops_Reciprocal`

- :doc:`../generate/classmindspore_ops_Reduce`

- :doc:`../generate/classmindspore_ops_ReduceFusion`

- :doc:`../generate/classmindspore_ops_ReduceScatter`

- :doc:`../generate/classmindspore_ops_Reshape`

- :doc:`../generate/classmindspore_ops_Resize`

- :doc:`../generate/classmindspore_ops_Return`

- :doc:`../generate/classmindspore_ops_ReverseSequence`

- :doc:`../generate/classmindspore_ops_ReverseV2`

- :doc:`../generate/classmindspore_ops_Rfft`

- :doc:`../generate/classmindspore_ops_ROIPooling`

- :doc:`../generate/classmindspore_ops_Round`

- :doc:`../generate/classmindspore_ops_Rsqrt`

- :doc:`../generate/classmindspore_ops_Scale`

- :doc:`../generate/classmindspore_ops_ScaleFusion`

- :doc:`../generate/classmindspore_ops_ScatterNd`

- :doc:`../generate/classmindspore_ops_ScatterNdUpdate`

- :doc:`../generate/classmindspore_ops_Select`

- :doc:`../generate/classmindspore_ops_SGD`

- :doc:`../generate/classmindspore_ops_Shape`

- :doc:`../generate/classmindspore_ops_SigmoidCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_Sin`

- :doc:`../generate/classmindspore_ops_Size`

- :doc:`../generate/classmindspore_ops_SkipGram`

- :doc:`../generate/classmindspore_ops_SliceFusion`

- :doc:`../generate/classmindspore_ops_SmoothL1Loss`

- :doc:`../generate/classmindspore_ops_Softmax`

- :doc:`../generate/classmindspore_ops_SoftmaxCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_SpaceToBatch`

- :doc:`../generate/classmindspore_ops_SpaceToBatchND`

- :doc:`../generate/classmindspore_ops_SpaceToDepth`

- :doc:`../generate/classmindspore_ops_SparseSoftmaxCrossEntropyWithLogits`

- :doc:`../generate/classmindspore_ops_SparseToDense`

- :doc:`../generate/classmindspore_ops_Splice`

- :doc:`../generate/classmindspore_ops_Split`

- :doc:`../generate/classmindspore_ops_SplitWithOverlap`

- :doc:`../generate/classmindspore_ops_Sqrt`

- :doc:`../generate/classmindspore_ops_Square`

- :doc:`../generate/classmindspore_ops_SquaredDifference`

- :doc:`../generate/classmindspore_ops_Squeeze`

- :doc:`../generate/classmindspore_ops_Stack`

- :doc:`../generate/classmindspore_ops_StridedSlice`

- :doc:`../generate/classmindspore_ops_Sub`

- :doc:`../generate/classmindspore_ops_SubFusion`

- :doc:`../generate/classmindspore_ops_Switch`

- :doc:`../generate/classmindspore_ops_SwitchLayer`

- :doc:`../generate/classmindspore_ops_TensorArray`

- :doc:`../generate/classmindspore_ops_TensorArrayRead`

- :doc:`../generate/classmindspore_ops_TensorArrayWrite`

- :doc:`../generate/classmindspore_ops_TensorListFromTensor`

- :doc:`../generate/classmindspore_ops_TensorListGetItem`

- :doc:`../generate/classmindspore_ops_TensorListReserve`

- :doc:`../generate/classmindspore_ops_TensorListSetItem`

- :doc:`../generate/classmindspore_ops_TensorListStack`

- :doc:`../generate/classmindspore_ops_Tile`

- :doc:`../generate/classmindspore_ops_TileFusion`

- :doc:`../generate/classmindspore_ops_TopK`

- :doc:`../generate/classmindspore_ops_TopKFusion`

- :doc:`../generate/classmindspore_ops_Transpose`

- :doc:`../generate/classmindspore_ops_TupleGetItem`

- :doc:`../generate/classmindspore_ops_UniformReal`

- :doc:`../generate/classmindspore_ops_Unique`

- :doc:`../generate/classmindspore_ops_UnsortedSegmentSum`

- :doc:`../generate/classmindspore_ops_Unsqueeze`

- :doc:`../generate/classmindspore_ops_Unstack`

- :doc:`../generate/classmindspore_ops_Where`

- :doc:`../generate/classmindspore_ops_ZerosLike`


Functions
---------


- :doc:`../generate/function_mindspore_ops_AddFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_AddInfer-1`

- :doc:`../generate/function_mindspore_ops_AddNInfer-1`

- :doc:`../generate/function_mindspore_ops_ApplyMomentumInfer-1`

- :doc:`../generate/function_mindspore_ops_ArgMaxFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_ArgMaxInfer-1`

- :doc:`../generate/function_mindspore_ops_ArgMinFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_AssertInfer-1`

- :doc:`../generate/function_mindspore_ops_AssignAddInfer-1`

- :doc:`../generate/function_mindspore_ops_AssignInfer-1`

- :doc:`../generate/function_mindspore_ops_AudioSpectrogramInfer-1`

- :doc:`../generate/function_mindspore_ops_AvgPoolFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_AvgPoolInfer-1`

- :doc:`../generate/function_mindspore_ops_BatchToSpaceNDInfer-1`

- :doc:`../generate/function_mindspore_ops_BiasAddInfer-1`

- :doc:`../generate/function_mindspore_ops_BroadcastInfer-1`

- :doc:`../generate/function_mindspore_ops_CastInfer-1`

- :doc:`../generate/function_mindspore_ops_CeilInfer-1`

- :doc:`../generate/function_mindspore_ops_ConcatInfer-1`

- :doc:`../generate/function_mindspore_ops_ConstantOfShapeInfer-1`

- :doc:`../generate/function_mindspore_ops_Conv2dInfer-1`

- :doc:`../generate/function_mindspore_ops_Conv2DTransposeInfer-1`

- :doc:`../generate/function_mindspore_ops_CosInfer-1`

- :doc:`../generate/function_mindspore_ops_CropInfer-1`

- :doc:`../generate/function_mindspore_ops_CumSumInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomExtractFeaturesInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomNormalizeInfer-1`

- :doc:`../generate/function_mindspore_ops_CustomPredictInfer-1`

- :doc:`../generate/function_mindspore_ops_DependInfer-1`

- :doc:`../generate/function_mindspore_ops_DepthToSpaceInfer-1`

- :doc:`../generate/function_mindspore_ops_DetectionPostProcessInfer-1`

- :doc:`../generate/function_mindspore_ops_DynamicQuantInfer-1`

- :doc:`../generate/function_mindspore_ops_EluInfer-1`

- :doc:`../generate/function_mindspore_ops_EqualInfer-1`

- :doc:`../generate/function_mindspore_ops_ErfInfer-1`

- :doc:`../generate/function_mindspore_ops_ExpandDimsInfer-1`

- :doc:`../generate/function_mindspore_ops_ExpInfer-1`

- :doc:`../generate/function_mindspore_ops_FakeQuantWithMinMaxVarsInfer-1`

- :doc:`../generate/function_mindspore_ops_FakeQuantWithMinMaxVarsPerChannelInfer-1`

- :doc:`../generate/function_mindspore_ops_FftImagInfer-1`

- :doc:`../generate/function_mindspore_ops_FftRealInfer-1`

- :doc:`../generate/function_mindspore_ops_FillInfer-1`

- :doc:`../generate/function_mindspore_ops_FlattenInfer-1`

- :doc:`../generate/function_mindspore_ops_FloorDivInfer-1`

- :doc:`../generate/function_mindspore_ops_FloorInfer-1`

- :doc:`../generate/function_mindspore_ops_FloorModInfer-1`

- :doc:`../generate/function_mindspore_ops_FullConnectionInfer-1`

- :doc:`../generate/function_mindspore_ops_GatherNdInfer-1`

- :doc:`../generate/function_mindspore_ops_GreaterEqualInfer-1`

- :doc:`../generate/function_mindspore_ops_GreaterInfer-1`

- :doc:`../generate/function_mindspore_ops_HashtableLookupInfer-1`

- :doc:`../generate/function_mindspore_ops_InferImplDropout-1`

- :doc:`../generate/function_mindspore_ops_LayerNormFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_LeakyReluInfer-1`

- :doc:`../generate/function_mindspore_ops_LessEqualInfer-1`

- :doc:`../generate/function_mindspore_ops_LessInfer-1`

- :doc:`../generate/function_mindspore_ops_LogicalAndInfer-1`

- :doc:`../generate/function_mindspore_ops_LogicalNotInfer-1`

- :doc:`../generate/function_mindspore_ops_LogicalOrInfer-1`

- :doc:`../generate/function_mindspore_ops_LogInfer-1`

- :doc:`../generate/function_mindspore_ops_LrnInfer-1`

- :doc:`../generate/function_mindspore_ops_LshProjectionInfer-1`

- :doc:`../generate/function_mindspore_ops_LstmInfer-1`

- :doc:`../generate/function_mindspore_ops_MaximumInfer-1`

- :doc:`../generate/function_mindspore_ops_MaxPoolFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_MaxPoolInfer-1`

- :doc:`../generate/function_mindspore_ops_MfccInfer-1`

- :doc:`../generate/function_mindspore_ops_ModInfer-1`

- :doc:`../generate/function_mindspore_ops_MulInfer-1`

- :doc:`../generate/function_mindspore_ops_NegInfer-1`

- :doc:`../generate/function_mindspore_ops_NonMaxSuppressionInfer-1`

- :doc:`../generate/function_mindspore_ops_NonZeroInfer-1`

- :doc:`../generate/function_mindspore_ops_NotEqualInfer-1`

- :doc:`../generate/function_mindspore_ops_OnesLikeInfer-1`

- :doc:`../generate/function_mindspore_ops_PadInfer-1`

- :doc:`../generate/function_mindspore_ops_PowInfer-1`

- :doc:`../generate/function_mindspore_ops_PReLUInfer-1`

- :doc:`../generate/function_mindspore_ops_PriorBoxInfer-1`

- :doc:`../generate/function_mindspore_ops_QuantDTypeCastInfer-1`

- :doc:`../generate/function_mindspore_ops_RaggedRangeInfer-1`

- :doc:`../generate/function_mindspore_ops_RandomStandardNormalInfer-1`

- :doc:`../generate/function_mindspore_ops_RangeInfer-1`

- :doc:`../generate/function_mindspore_ops_RankInfer-1`

- :doc:`../generate/function_mindspore_ops_RealDivInfer-1`

- :doc:`../generate/function_mindspore_ops_ReciprocalInfer-1`

- :doc:`../generate/function_mindspore_ops_ReduceFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_ReduceInfer-1`

- :doc:`../generate/function_mindspore_ops_ReshapeInfer-1`

- :doc:`../generate/function_mindspore_ops_ResizeInfer-1`

- :doc:`../generate/function_mindspore_ops_ReverseSequenceInfer-1`

- :doc:`../generate/function_mindspore_ops_ReverseV2Infer-1`

- :doc:`../generate/function_mindspore_ops_RfftInfer-1`

- :doc:`../generate/function_mindspore_ops_ROIPoolingInfer-1`

- :doc:`../generate/function_mindspore_ops_RoundInfer-1`

- :doc:`../generate/function_mindspore_ops_RsqrtInfer-1`

- :doc:`../generate/function_mindspore_ops_ScatterNdInfer-1`

- :doc:`../generate/function_mindspore_ops_ScatterNdUpdateInfer-1`

- :doc:`../generate/function_mindspore_ops_SGDInfer-1`

- :doc:`../generate/function_mindspore_ops_SinInfer-1`

- :doc:`../generate/function_mindspore_ops_SkipGramInfer-1`

- :doc:`../generate/function_mindspore_ops_SliceFusionInfer-1`

- :doc:`../generate/function_mindspore_ops_SmoothL1LossInfer-1`

- :doc:`../generate/function_mindspore_ops_SoftmaxInfer-1`

- :doc:`../generate/function_mindspore_ops_SpaceToBatchNDInfer-1`

- :doc:`../generate/function_mindspore_ops_SpaceToDepthInfer-1`

- :doc:`../generate/function_mindspore_ops_SparseSoftmaxCrossEntropyWithLogitsInfer-1`

- :doc:`../generate/function_mindspore_ops_SparseToDenseInfer-1`

- :doc:`../generate/function_mindspore_ops_SplitInfer-1`

- :doc:`../generate/function_mindspore_ops_SquaredDifferenceInfer-1`

- :doc:`../generate/function_mindspore_ops_SquareInfer-1`

- :doc:`../generate/function_mindspore_ops_SqueezeInfer-1`

- :doc:`../generate/function_mindspore_ops_StackInfer-1`

- :doc:`../generate/function_mindspore_ops_StridedSliceInfer-1`

- :doc:`../generate/function_mindspore_ops_SubInfer-1`

- :doc:`../generate/function_mindspore_ops_TensorListFromTensorInfer-1`

- :doc:`../generate/function_mindspore_ops_TensorListStackInfer-1`

- :doc:`../generate/function_mindspore_ops_TileInfer-1`

- :doc:`../generate/function_mindspore_ops_TopKInfer-1`

- :doc:`../generate/function_mindspore_ops_UniformRealInfer-1`

- :doc:`../generate/function_mindspore_ops_UnsortedSegmentSumInfer-1`

- :doc:`../generate/function_mindspore_ops_UnsqueezeInfer-1`

- :doc:`../generate/function_mindspore_ops_UnstackInfer-1`

- :doc:`../generate/function_mindspore_ops_WhereInfer-1`
